--- a/notebooks/controle_numpy_matplotlib.ipynb
+++ b/notebooks/controle_numpy_matplotlib.ipynb
@@ -72,13 +72,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "9fvpZGmmwXzd"
+        "id": "9fvpZGmmwXzd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fd5e7592-7b94-46ff-82e8-cdf6a4b75bfa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(150, 6)\n"
+          ]
+        }
+      ],
       "source": [
-        "# Votre code ici\n"
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "data = np.genfromtxt('/content/Iris.csv' , delimiter=',' , skip_header=1)\n",
+        "print(data.shape)"
       ]
     },
     {
