forcer numpy a lire les chaine de caracteres avec dtype='<U20'

--- a/notebooks/controle_numpy_matplotlib.ipynb
+++ b/notebooks/controle_numpy_matplotlib.ipynb
@@ -72,28 +72,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 16,
       "metadata": {
         "id": "9fvpZGmmwXzd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd5e7592-7b94-46ff-82e8-cdf6a4b75bfa"
+        "outputId": "d5b93045-cfd3-4c92-81c6-2d1c8f462fbf"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(150, 6)\n"
+            "shape du dataset : (150, 6)\n"
           ]
         }
       ],
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "data = np.genfromtxt('/content/Iris.csv' , delimiter=',' , skip_header=1)\n",
-        "print(data.shape)"
+        "data = data = np.genfromtxt('/content/Iris.csv', delimiter=',', skip_header=1, dtype='<U20')\n",
+        "print(f\"shape du dataset : {data.shape}\")"
       ]
     },
     {
@@ -119,12 +119,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Votre code ici\n"
+        "features = data[: , 1:5]\n",
+        "species = data[: , -1]\n"
       ],
       "metadata": {
         "id": "m-99RQetxaPz"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
