partie A COMPLETE L'erreur commise au debut : Faire np.genfromtxt('file.csv') sans préciser le type. Solution : j'ai charge tout le tableau en String , puis j'ai slice les donnees et les converties en Float avec features = data[:, 1:5].astype(float) et j'ai slice les labels et les garde en string

--- a/notebooks/controle_numpy_matplotlib.ipynb
+++ b/notebooks/controle_numpy_matplotlib.ipynb
@@ -120,13 +120,13 @@
     {
       "cell_type": "code",
       "source": [
-        "features = data[: , 1:5]\n",
+        "features = data[: , 1:5].astype(float)\n",
         "species = data[: , -1]\n"
       ],
       "metadata": {
         "id": "m-99RQetxaPz"
       },
-      "execution_count": 19,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -142,13 +142,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# Votre code ici\n"
+        "print(features[:5])\n"
       ],
       "metadata": {
-        "id": "UZCtrKnBxjY-"
+        "id": "UZCtrKnBxjY-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "08808cf2-3dcf-4b75-e725-479bbb869f66"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5.1 3.5 1.4 0.2]\n",
+            " [4.9 3.  1.4 0.2]\n",
+            " [4.7 3.2 1.3 0.2]\n",
+            " [4.6 3.1 1.5 0.2]\n",
+            " [5.  3.6 1.4 0.2]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -164,13 +180,28 @@
     {
       "cell_type": "code",
       "source": [
-        "# Votre code ici\n"
+        "sepal_length= features[: , 0]\n",
+        "print(f\"Size : {sepal_length.size}\")\n",
+        "print(f\"Dtype : {sepal_length.dtype}\")"
       ],
       "metadata": {
-        "id": "VQg_FgoQxmpU"
+        "id": "VQg_FgoQxmpU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f79945ef-b0f4-4475-8eb6-a02f03310eef"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Size : 150\n",
+            "Dtype : float64\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -186,13 +217,77 @@
     {
       "cell_type": "code",
       "source": [
-        "# Votre code ici\n"
+        "setosa_features =features[:50]\n",
+        "print(setosa_features.shape)\n",
+        "print(setosa_features)"
       ],
       "metadata": {
-        "id": "b_LIrg_exsUm"
+        "id": "b_LIrg_exsUm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b6f8886-c46e-4128-f164-8c45ab2d8691"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(50, 4)\n",
+            "[[5.1 3.5 1.4 0.2]\n",
+            " [4.9 3.  1.4 0.2]\n",
+            " [4.7 3.2 1.3 0.2]\n",
+            " [4.6 3.1 1.5 0.2]\n",
+            " [5.  3.6 1.4 0.2]\n",
+            " [5.4 3.9 1.7 0.4]\n",
+            " [4.6 3.4 1.4 0.3]\n",
+            " [5.  3.4 1.5 0.2]\n",
+            " [4.4 2.9 1.4 0.2]\n",
+            " [4.9 3.1 1.5 0.1]\n",
+            " [5.4 3.7 1.5 0.2]\n",
+            " [4.8 3.4 1.6 0.2]\n",
+            " [4.8 3.  1.4 0.1]\n",
+            " [4.3 3.  1.1 0.1]\n",
+            " [5.8 4.  1.2 0.2]\n",
+            " [5.7 4.4 1.5 0.4]\n",
+            " [5.4 3.9 1.3 0.4]\n",
+            " [5.1 3.5 1.4 0.3]\n",
+            " [5.7 3.8 1.7 0.3]\n",
+            " [5.1 3.8 1.5 0.3]\n",
+            " [5.4 3.4 1.7 0.2]\n",
+            " [5.1 3.7 1.5 0.4]\n",
+            " [4.6 3.6 1.  0.2]\n",
+            " [5.1 3.3 1.7 0.5]\n",
+            " [4.8 3.4 1.9 0.2]\n",
+            " [5.  3.  1.6 0.2]\n",
+            " [5.  3.4 1.6 0.4]\n",
+            " [5.2 3.5 1.5 0.2]\n",
+            " [5.2 3.4 1.4 0.2]\n",
+            " [4.7 3.2 1.6 0.2]\n",
+            " [4.8 3.1 1.6 0.2]\n",
+            " [5.4 3.4 1.5 0.4]\n",
+            " [5.2 4.1 1.5 0.1]\n",
+            " [5.5 4.2 1.4 0.2]\n",
+            " [4.9 3.1 1.5 0.1]\n",
+            " [5.  3.2 1.2 0.2]\n",
+            " [5.5 3.5 1.3 0.2]\n",
+            " [4.9 3.1 1.5 0.1]\n",
+            " [4.4 3.  1.3 0.2]\n",
+            " [5.1 3.4 1.5 0.2]\n",
+            " [5.  3.5 1.3 0.3]\n",
+            " [4.5 2.3 1.3 0.3]\n",
+            " [4.4 3.2 1.3 0.2]\n",
+            " [5.  3.5 1.6 0.6]\n",
+            " [5.1 3.8 1.9 0.4]\n",
+            " [4.8 3.  1.4 0.3]\n",
+            " [5.1 3.8 1.6 0.2]\n",
+            " [4.6 3.2 1.4 0.2]\n",
+            " [5.3 3.7 1.5 0.2]\n",
+            " [5.  3.3 1.4 0.2]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -216,7 +311,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Votre code ici\n"
+        "\n"
       ],
       "metadata": {
         "id": "KKxDj8mexv69"
