Statistiques Basiques et Opérations Mathématiques

--- a/notebooks/controle_numpy_matplotlib.ipynb
+++ b/notebooks/controle_numpy_matplotlib.ipynb
@@ -311,13 +311,26 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "mean = np.mean(features , axis=0)\n",
+        "print(f\"Moyennes par feature : {mean}\")"
       ],
       "metadata": {
-        "id": "KKxDj8mexv69"
+        "id": "KKxDj8mexv69",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3bbce091-853e-486f-c401-5cb1c9bb1189"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Moyennes par feature : [5.84333333 3.054      3.75866667 1.19866667]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -332,13 +345,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# Votre code ici\n"
+        "min_val = np.min(features[: , 2])\n",
+        "max_val = np.max(features[: ,2])\n",
+        "print(f\"la valeur minimale {min_val}\")\n",
+        "print(f\"la valeur maximale {max_val}\")\n"
       ],
       "metadata": {
-        "id": "Zxsf6MIHx0iu"
+        "id": "Zxsf6MIHx0iu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a17bcec2-5caa-4c2a-8ed0-43b32be64981"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "la valeur minimale 1.0\n",
+            "la valeur maximale 6.9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -354,13 +383,50 @@
     {
       "cell_type": "code",
       "source": [
-        "# Votre code ici\n"
+        "normalized_petals = features[: ,2]/max_val\n",
+        "print(f\"les longueurs des pétales normaliser{normalized_petals} \")\n"
       ],
       "metadata": {
-        "id": "H5jG5Hr3x4LA"
+        "id": "H5jG5Hr3x4LA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "edffb729-3863-47ee-ad6a-c9700d1c50a4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "les longueurs des pétales normaliser[0.20289855 0.20289855 0.1884058  0.2173913  0.20289855 0.24637681\n",
+            " 0.20289855 0.2173913  0.20289855 0.2173913  0.2173913  0.23188406\n",
+            " 0.20289855 0.15942029 0.17391304 0.2173913  0.1884058  0.20289855\n",
+            " 0.24637681 0.2173913  0.24637681 0.2173913  0.14492754 0.24637681\n",
+            " 0.27536232 0.23188406 0.23188406 0.2173913  0.20289855 0.23188406\n",
+            " 0.23188406 0.2173913  0.2173913  0.20289855 0.2173913  0.17391304\n",
+            " 0.1884058  0.2173913  0.1884058  0.2173913  0.1884058  0.1884058\n",
+            " 0.1884058  0.23188406 0.27536232 0.20289855 0.23188406 0.20289855\n",
+            " 0.2173913  0.20289855 0.68115942 0.65217391 0.71014493 0.57971014\n",
+            " 0.66666667 0.65217391 0.68115942 0.47826087 0.66666667 0.56521739\n",
+            " 0.50724638 0.60869565 0.57971014 0.68115942 0.52173913 0.63768116\n",
+            " 0.65217391 0.5942029  0.65217391 0.56521739 0.69565217 0.57971014\n",
+            " 0.71014493 0.68115942 0.62318841 0.63768116 0.69565217 0.72463768\n",
+            " 0.65217391 0.50724638 0.55072464 0.53623188 0.56521739 0.73913043\n",
+            " 0.65217391 0.65217391 0.68115942 0.63768116 0.5942029  0.57971014\n",
+            " 0.63768116 0.66666667 0.57971014 0.47826087 0.60869565 0.60869565\n",
+            " 0.60869565 0.62318841 0.43478261 0.5942029  0.86956522 0.73913043\n",
+            " 0.85507246 0.8115942  0.84057971 0.95652174 0.65217391 0.91304348\n",
+            " 0.84057971 0.88405797 0.73913043 0.76811594 0.79710145 0.72463768\n",
+            " 0.73913043 0.76811594 0.79710145 0.97101449 1.         0.72463768\n",
+            " 0.82608696 0.71014493 0.97101449 0.71014493 0.82608696 0.86956522\n",
+            " 0.69565217 0.71014493 0.8115942  0.84057971 0.88405797 0.92753623\n",
+            " 0.8115942  0.73913043 0.8115942  0.88405797 0.8115942  0.79710145\n",
+            " 0.69565217 0.7826087  0.8115942  0.73913043 0.73913043 0.85507246\n",
+            " 0.82608696 0.75362319 0.72463768 0.75362319 0.7826087  0.73913043] \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -376,13 +442,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Votre code ici\n"
+        "versicolor_petal_width = features[50:100 , 3]\n",
+        "cumsum_versicolor = np.cumsum(versicolor_petal_width)\n",
+        "print(f\"cumsum du 10 premieres val{cumsum_versicolor[:10]}\")"
       ],
       "metadata": {
-        "id": "BnX4x9iQx6tm"
+        "id": "BnX4x9iQx6tm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "64abae82-e171-4ab1-8170-1f69f29244bf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cumsum du 10 premieres val[ 1.4  2.9  4.4  5.7  7.2  8.5 10.1 11.1 12.4 13.8]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -398,13 +478,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Votre code ici\n"
+        "versicolor_petal_width = features[50:100 , 3]\n",
+        "cumsum_versicolor = np.cumsum(versicolor_petal_width)\n",
+        "print(f\"cumsum du 10 premieres val{cumsum_versicolor[:10]}\")\n"
       ],
       "metadata": {
-        "id": "L1at7bbfx94U"
+        "id": "L1at7bbfx94U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ce15f4c5-76fb-4bae-a93a-7f11b2aafaa1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cumsum du 10 premieres val[ 1.4  2.9  4.4  5.7  7.2  8.5 10.1 11.1 12.4 13.8]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
