--- a/notebooks/controle_numpy_matplotlib.ipynb
+++ b/notebooks/controle_numpy_matplotlib.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,23 +73,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
-        "id": "9fvpZGmmwXzd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "909d0b5b-dbf0-4150-c00d-c7f852d9991e"
+        "id": "9fvpZGmmwXzd"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "shape du dataset : (150, 6)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -126,7 +115,7 @@
       "metadata": {
         "id": "m-99RQetxaPz"
       },
-      "execution_count": 30,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -145,26 +134,10 @@
         "print(features[:5])\n"
       ],
       "metadata": {
-        "id": "UZCtrKnBxjY-",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "08808cf2-3dcf-4b75-e725-479bbb869f66"
+        "id": "UZCtrKnBxjY-"
       },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[5.1 3.5 1.4 0.2]\n",
-            " [4.9 3.  1.4 0.2]\n",
-            " [4.7 3.2 1.3 0.2]\n",
-            " [4.6 3.1 1.5 0.2]\n",
-            " [5.  3.6 1.4 0.2]]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -185,23 +158,10 @@
         "print(f\"Dtype : {sepal_length.dtype}\")"
       ],
       "metadata": {
-        "id": "VQg_FgoQxmpU",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f79945ef-b0f4-4475-8eb6-a02f03310eef"
+        "id": "VQg_FgoQxmpU"
       },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Size : 150\n",
-            "Dtype : float64\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -222,72 +182,10 @@
         "print(setosa_features)"
       ],
       "metadata": {
-        "id": "b_LIrg_exsUm",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7b6f8886-c46e-4128-f164-8c45ab2d8691"
+        "id": "b_LIrg_exsUm"
       },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(50, 4)\n",
-            "[[5.1 3.5 1.4 0.2]\n",
-            " [4.9 3.  1.4 0.2]\n",
-            " [4.7 3.2 1.3 0.2]\n",
-            " [4.6 3.1 1.5 0.2]\n",
-            " [5.  3.6 1.4 0.2]\n",
-            " [5.4 3.9 1.7 0.4]\n",
-            " [4.6 3.4 1.4 0.3]\n",
-            " [5.  3.4 1.5 0.2]\n",
-            " [4.4 2.9 1.4 0.2]\n",
-            " [4.9 3.1 1.5 0.1]\n",
-            " [5.4 3.7 1.5 0.2]\n",
-            " [4.8 3.4 1.6 0.2]\n",
-            " [4.8 3.  1.4 0.1]\n",
-            " [4.3 3.  1.1 0.1]\n",
-            " [5.8 4.  1.2 0.2]\n",
-            " [5.7 4.4 1.5 0.4]\n",
-            " [5.4 3.9 1.3 0.4]\n",
-            " [5.1 3.5 1.4 0.3]\n",
-            " [5.7 3.8 1.7 0.3]\n",
-            " [5.1 3.8 1.5 0.3]\n",
-            " [5.4 3.4 1.7 0.2]\n",
-            " [5.1 3.7 1.5 0.4]\n",
-            " [4.6 3.6 1.  0.2]\n",
-            " [5.1 3.3 1.7 0.5]\n",
-            " [4.8 3.4 1.9 0.2]\n",
-            " [5.  3.  1.6 0.2]\n",
-            " [5.  3.4 1.6 0.4]\n",
-            " [5.2 3.5 1.5 0.2]\n",
-            " [5.2 3.4 1.4 0.2]\n",
-            " [4.7 3.2 1.6 0.2]\n",
-            " [4.8 3.1 1.6 0.2]\n",
-            " [5.4 3.4 1.5 0.4]\n",
-            " [5.2 4.1 1.5 0.1]\n",
-            " [5.5 4.2 1.4 0.2]\n",
-            " [4.9 3.1 1.5 0.1]\n",
-            " [5.  3.2 1.2 0.2]\n",
-            " [5.5 3.5 1.3 0.2]\n",
-            " [4.9 3.1 1.5 0.1]\n",
-            " [4.4 3.  1.3 0.2]\n",
-            " [5.1 3.4 1.5 0.2]\n",
-            " [5.  3.5 1.3 0.3]\n",
-            " [4.5 2.3 1.3 0.3]\n",
-            " [4.4 3.2 1.3 0.2]\n",
-            " [5.  3.5 1.6 0.6]\n",
-            " [5.1 3.8 1.9 0.4]\n",
-            " [4.8 3.  1.4 0.3]\n",
-            " [5.1 3.8 1.6 0.2]\n",
-            " [4.6 3.2 1.4 0.2]\n",
-            " [5.3 3.7 1.5 0.2]\n",
-            " [5.  3.3 1.4 0.2]]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -315,22 +213,10 @@
         "print(f\"Moyennes par feature : {mean}\")"
       ],
       "metadata": {
-        "id": "KKxDj8mexv69",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3bbce091-853e-486f-c401-5cb1c9bb1189"
+        "id": "KKxDj8mexv69"
       },
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Moyennes par feature : [5.84333333 3.054      3.75866667 1.19866667]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -351,23 +237,10 @@
         "print(f\"la valeur maximale {max_val}\")\n"
       ],
       "metadata": {
-        "id": "Zxsf6MIHx0iu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a17bcec2-5caa-4c2a-8ed0-43b32be64981"
+        "id": "Zxsf6MIHx0iu"
       },
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "la valeur minimale 1.0\n",
-            "la valeur maximale 6.9\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -387,46 +260,10 @@
         "print(f\"les longueurs des pétales normaliser{normalized_petals} \")\n"
       ],
       "metadata": {
-        "id": "H5jG5Hr3x4LA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "edffb729-3863-47ee-ad6a-c9700d1c50a4"
+        "id": "H5jG5Hr3x4LA"
       },
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "les longueurs des pétales normaliser[0.20289855 0.20289855 0.1884058  0.2173913  0.20289855 0.24637681\n",
-            " 0.20289855 0.2173913  0.20289855 0.2173913  0.2173913  0.23188406\n",
-            " 0.20289855 0.15942029 0.17391304 0.2173913  0.1884058  0.20289855\n",
-            " 0.24637681 0.2173913  0.24637681 0.2173913  0.14492754 0.24637681\n",
-            " 0.27536232 0.23188406 0.23188406 0.2173913  0.20289855 0.23188406\n",
-            " 0.23188406 0.2173913  0.2173913  0.20289855 0.2173913  0.17391304\n",
-            " 0.1884058  0.2173913  0.1884058  0.2173913  0.1884058  0.1884058\n",
-            " 0.1884058  0.23188406 0.27536232 0.20289855 0.23188406 0.20289855\n",
-            " 0.2173913  0.20289855 0.68115942 0.65217391 0.71014493 0.57971014\n",
-            " 0.66666667 0.65217391 0.68115942 0.47826087 0.66666667 0.56521739\n",
-            " 0.50724638 0.60869565 0.57971014 0.68115942 0.52173913 0.63768116\n",
-            " 0.65217391 0.5942029  0.65217391 0.56521739 0.69565217 0.57971014\n",
-            " 0.71014493 0.68115942 0.62318841 0.63768116 0.69565217 0.72463768\n",
-            " 0.65217391 0.50724638 0.55072464 0.53623188 0.56521739 0.73913043\n",
-            " 0.65217391 0.65217391 0.68115942 0.63768116 0.5942029  0.57971014\n",
-            " 0.63768116 0.66666667 0.57971014 0.47826087 0.60869565 0.60869565\n",
-            " 0.60869565 0.62318841 0.43478261 0.5942029  0.86956522 0.73913043\n",
-            " 0.85507246 0.8115942  0.84057971 0.95652174 0.65217391 0.91304348\n",
-            " 0.84057971 0.88405797 0.73913043 0.76811594 0.79710145 0.72463768\n",
-            " 0.73913043 0.76811594 0.79710145 0.97101449 1.         0.72463768\n",
-            " 0.82608696 0.71014493 0.97101449 0.71014493 0.82608696 0.86956522\n",
-            " 0.69565217 0.71014493 0.8115942  0.84057971 0.88405797 0.92753623\n",
-            " 0.8115942  0.73913043 0.8115942  0.88405797 0.8115942  0.79710145\n",
-            " 0.69565217 0.7826087  0.8115942  0.73913043 0.73913043 0.85507246\n",
-            " 0.82608696 0.75362319 0.72463768 0.75362319 0.7826087  0.73913043] \n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -447,22 +284,10 @@
         "print(f\"cumsum du 10 premieres val{cumsum_versicolor[:10]}\")"
       ],
       "metadata": {
-        "id": "BnX4x9iQx6tm",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "64abae82-e171-4ab1-8170-1f69f29244bf"
+        "id": "BnX4x9iQx6tm"
       },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cumsum du 10 premieres val[ 1.4  2.9  4.4  5.7  7.2  8.5 10.1 11.1 12.4 13.8]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -483,22 +308,10 @@
         "print(f\"cumsum du 10 premieres val{cumsum_versicolor[:10]}\")\n"
       ],
       "metadata": {
-        "id": "L1at7bbfx94U",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ce15f4c5-76fb-4bae-a93a-7f11b2aafaa1"
+        "id": "L1at7bbfx94U"
       },
-      "execution_count": 53,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cumsum du 10 premieres val[ 1.4  2.9  4.4  5.7  7.2  8.5 10.1 11.1 12.4 13.8]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
